# hypno-chat-bot

./: .coverage  .cursor-rules.mdc  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  interactive_hypnobot1.py  pyproject.toml  requirements-compatible.txt  requirements.txt  run_api.py  run_cli.py  run_hypnobot1.py  run_tests.py  setup.py  setup_env.sh
.cursor-rules/: .cursor-rules.md  .cursor-rules.mdc  agent-prompts.md  agents.md  crewai-best-practices.md  dev-env-hosting.md  index.md  project-overview.md  project-structure.md  rag-tool.md  safety-protocols.md  updated-project-structure.md
.cursor-rules/implementation-examples/: knowledge-tool.md  process-workflow.md  safety-tool.md  simplified-poc.md
.cursor-rules/jupiter-notebooks/: L6_collaboration_financial_analysis.md
.cursor/rules/: crewai-rule.mdc  implementation-steps.mdc  rag-implementation.mdc
docs/course/jupiter-notebooks/: L3_customer_support.py  L4_tools_customer_outreach.md  L5_tasks_event_planning.md
scripts/: check_env.py  run.py  test_hypnobot1.py  test_process.py
src/hypnobot/: __init__.py  api.py  crew.py  hypnobot.py  loader.py  logging_utils.py  main.py  memory_patch.py  service_message_detector.py  task_factory.py  test_config.py  test_hypnobot.py
src/hypnobot.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/hypnobot/agents/: __init__.py  client_agent.py  (+1 more)
src/hypnobot1/: README.md  __init__.py  crew.py  utils.py
tests/: conftest.py
tests/integration/: test_api.py
tests/unit/: test_cli.py  test_config_loader.py  test_hypnobot.py  test_main.py
(+34 files in other folders)
